[pads] Hide pads' .doc export link (bug libreoffice Stretch)

--- a/ext/etherpad.css
+++ b/ext/etherpad.css
@@ -46,3 +46,8 @@
         top:42px !important;
     }
 }
+
+/* Hide .doc export (bug avec libreoffice de Stretch) */
+#exportworda {
+    display: none;
+}
